# image-captioning

./: LICENSE  README.md  descriptions.txt  main.ipynb  model.json  pyproject.toml  test.py
